# jarjarquant

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: test.yml
examples/: data_service_usage.py
jarjarquant/: __init__.py  config.py  data_analyst.py  data_gatherer.py  data_service.py  feature_engineer.py  feature_engineering.py  feature_evaluator.py  indicator.py  jarjarquant.py  labeller.py  labelling.py  tws_api.ipynb  tws_api.py  utilities.py
jarjarquant/cython_utils/: bar_permute.c  bar_permute.pyx  indicators.c  indicators.pyx  opt_threshold.c  opt_threshold.pyx
jarjarquant/data_gatherer/: __init__.py  alphavantage.py  base.py  custom.py  eodhd.py  synthetic.py  tws.py  utils.py  yahoo.py
jarjarquant/indicators/: __init__.py  adx.py  anchored_vwap.py  aroon.py  base.py  chaikin_money_flow.py  cmma.py  detrended_rsi.py  macd.py  moving_average_difference.py  price_change_oscillator.py  price_intensity.py  registry.py  regression_trend.py  regression_trend_deviation.py  rsi.py  stochastic.py  stochastic_rsi.py
jarjarquant/ticker_samples/: build_sample_sets.ipynb
jarjarquant/ticker_samples/TV_Screens/: TV_SCREEN_US_STOCK_LARGECAP_02_24_25.csv  TV_SCREEN_US_STOCK_MEGACAP_02_24_25.csv  TV_SCREEN_US_STOCK_MICROCAP_02_24_25.csv  TV_SCREEN_US_STOCK_MIDCAP_02_24_25.csv  TV_SCREEN_US_STOCK_SHRIMP_02_24_25.csv  TV_SCREEN_US_STOCK_SMALLCAP_02_24_25.csv
notebooks/: data_gathering.ipynb  feature_engineering.ipynb  getting_started.ipynb  indicators.ipynb  jarjarquant_with_data_service.ipynb  tws_data_gathering.ipynb
tests/: test_bar_permute.py  test_data_analyst.py  test_data_gatherer.py  test_data_service.py  test_feature_engineer.py  test_feature_evaluator.py  test_indicator_registry.py  test_jarjarquant.py  test_labeller.py  test_synthetic.py
